--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   animate_do: ^3.3.4
   font_awesome_flutter: ^10.7.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
